--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DB_CONN_STRING = mongodb+srv://doadmin:39Wm75t810h4BlkL@superminds-cluster-7f2d92d1.mongo.ondigitalocean.com/admin?ssl=true&authSource=admin
+MONGO_DB_CONN_STRING = mongodb+srv://pratyush:76m3t4IY0kqh19p8@superminds-cluster-public-f49e7a24.mongo.ondigitalocean.com/admin?authSource=admin&replicaSet=superminds-cluster-public&tls=true
